# dnssec_proof

./: .gitignore  README.md  ffigen.yaml  ffigen_config.yaml  pubspec.yaml
android/: build.gradle  settings.gradle
android/src/main/: AndroidManifest.xml
cargokit/gradle/: plugin.gradle
example/: README.md  pubspec.yaml
example/android/app/: build.gradle
example/android/app/src/main/: AndroidManifest.xml
example/android/app/src/main/kotlin/com/example/dnssec_proof_example/: MainActivity.kt
example/android/app/src/main/kotlin/net/mrcyjanek/dnssec_proof_example/: MainActivity.kt
example/ios/Runner/: Info.plist
example/ios/Runner.xcodeproj/: project.pbxproj
example/lib/: main.dart
example/linux/: CMakeLists.txt
example/linux/runner/: my_application.cc
example/macos/Runner.xcodeproj/: project.pbxproj
example/macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
example/macos/Runner/Configs/: AppInfo.xcconfig
example/windows/: CMakeLists.txt
example/windows/runner/: Runner.rc  main.cpp
ios/: dnssec_proof.podspec
ios/Classes/: dnssec_proof.c
lib/: dnssec_proof.dart  dnssec_proof_bindings_generated.dart  ffi.dart  generated_bindings.g.dart
linux/: CMakeLists.txt
macos/: dnssec_proof.podspec
rust/: Cargo.toml
rust/src/: dnssec_proof.h  lib.rs
src/: CMakeLists.txt  dnssec_proof.c
windows/: CMakeLists.txt
